resolve code block title wrong position when scrolling

--- a/sass/parts/_syntax.scss
+++ b/sass/parts/_syntax.scss
@@ -49,7 +49,6 @@ figure.code{
 	margin-top: 10px;
 	border: 1px solid $gray03;
 	line-height: 1.5;
-	overflow-x: auto;
 	@include border-radius(5px);
 	figcaption{
 		font-size: $meta-size;
@@ -68,6 +67,9 @@ figure.code{
 			top: 5px;
 			right: 0;
 		}
+	}
+	.highlight{
+		overflow-x: auto;
 	}
 	.line-numbers{
 		border-right: 1px solid $gray03;
